Fixing overflow of screen width

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,15 @@
 .App {
   text-align: center;
-  min-height: calc(100vh - 70px);
+  min-height: 100vh;
   width: 100vw;
   background: linear-gradient(to bottom right, blue 10%, #ffbe98 100%);
   margin: 0px;
   position: relative;
   padding-bottom: 70px;
   height: fit-content;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .App-logo {
